force-app/main/default/objects/Kenyt_Setting__mdt/Kenyt_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Org-wide connection settings for the Kenyt.AI Campaigns Messaging API.</description>
    <label>Kenyt Setting</label>
    <pluralLabel>Kenyt Settings</pluralLabel>
</CustomObject>