force-app/main/default/objects/Kenyt_Setting__mdt/fields/Auth_Token__c.field-meta.xml
<CustomField>
    <fullName>Auth_Token__c</fullName>
    <label>Auth Token</label>
    <inlineHelpText>CRM Auth Token from Kenyt, passed as the authToken query param.</inlineHelpText>
    <length>255</length>
    <type>Text</type>
</CustomField>