force-app/main/default/objects/Kenyt_Setting__mdt/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <label>Base URL</label>
    <inlineHelpText>Kenyt region base URL, e.g. https://india.kenyt.ai</inlineHelpText>
    <length>255</length>
    <type>Text</type>
</CustomField>