force-app/main/default/objects/Kenyt_Setting__mdt/fields/Default_Bot_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Bot_Id__c</fullName>
    <inlineHelpText>Default Kenyt BotId used when a template record does not specify its own.</inlineHelpText>
    <label>Default Bot Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>