force-app/main/default/objects/Kenyt_Setting__mdt/fields/Organization_Id__c.field-meta.xml
<CustomField>
    <fullName>Organization_Id__c</fullName>
    <label>Organization Id</label>
    <inlineHelpText>Kenyt Organization ID, passed as the organizationId query param.</inlineHelpText>
    <length>100</length>
    <type>Text</type>
</CustomField>